Removed proxy setup to prevent invalid host error

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "typescript": "^3.7.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "startdev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,6 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:9000"
+  }
 }
