--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.12.0",
     "react-dragula": "^1.1.17",
     "react-scripts": "3.3.0",
+    "styled-components": "^4.4.1",
     "typescript": "^3.7.3"
   },
   "scripts": {
